// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. group of topics 1`] = `
<div>
  <div>
    <a
      href="/topic/football"
      target={null}
    >
      <div>
        <div
          role="button"
          tabIndex="0"
        >
          Football
        </div>
      </div>
    </a>
  </div>
  <div>
    <a
      href="/topic/manchester-united"
      target={null}
    >
      <div>
        <div
          role="button"
          tabIndex="0"
        >
          Manchester United FC
        </div>
      </div>
    </a>
  </div>
  <div>
    <a
      href="/topic/chelsea"
      target={null}
    >
      <div>
        <div
          role="button"
          tabIndex="0"
        >
          Chelsea FC
        </div>
      </div>
    </a>
  </div>
  <div>
    <a
      href="/topic/arsenal"
      target={null}
    >
      <div>
        <div
          role="button"
          tabIndex="0"
        >
          Arsenal
        </div>
      </div>
    </a>
  </div>
  <div>
    <a
      href="/topic/rugby-union"
      target={null}
    >
      <div>
        <div
          role="button"
          tabIndex="0"
        >
          Rugby Union
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`2. onpress handler is called with the expected args 1`] = `
Array [
  Array [
    "event",
    Object {
      "name": "Football",
      "slug": "football",
    },
  ],
]
`;

exports[`3. onpress sends analytics 1`] = `
Array [
  Array [
    Object {
      "action": "Viewed",
      "attrs": Object {
        "eventTime": "2018-01-01T00:00:00.000Z",
      },
      "component": "Page",
      "object": "Article",
    },
  ],
  Array [
    Object {
      "action": "Pressed",
      "attrs": Object {
        "eventTime": "2018-01-01T00:00:00.000Z",
        "name": "Football",
        "slug": "football",
      },
      "component": "TopicLink",
      "object": "Article",
    },
  ],
]
`;

exports[`4. article topic 1`] = `
<div>
  <a
    href="/topic/test-slug"
    target={null}
  >
    <div>
      <div
        role="button"
        tabIndex="0"
      >
        Test
      </div>
    </div>
  </a>
</div>
`;
